--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-<img src="http://77.222.37.9/files/SchoolStudent1.png" alt="Изображение">
+<img src="https://77.222.37.9/files/Administrator1.png" alt="Изображение">
 </body>
 </html>
